[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player2.gd" type="Script" id=1]
[ext_resource path="res://dot.png" type="Texture" id=2]
[ext_resource path="res://Leg2.tscn" type="PackedScene" id=3]

[node name="Player2" type="Node2D"]
position = Vector2( 356, 173 )
script = ExtResource( 1 )

[node name="BodyTop" type="Position2D" parent="."]
rotation = -1.5708

[node name="Sprite" type="Sprite" parent="BodyTop"]
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="BodyTop/Sprite"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
offset = Vector2( 60, 0 )

[node name="BodyBottom" type="Position2D" parent="."]
position = Vector2( 0, 80 )

[node name="Sprite" type="Sprite" parent="BodyBottom"]
texture = ExtResource( 2 )

[node name="Leg2" parent="." instance=ExtResource( 3 )]

[node name="Bone1" parent="Leg2/Skeleton2D" index="0"]
rotation = -0.157443

[node name="Bone2" parent="Leg2/Skeleton2D/Bone1" index="0"]
rotation = 0.782533

[editable path="Leg2"]
